--- a/public/about.html
+++ b/public/about.html
@@ -1,6 +1,6 @@
 <h1>About Me</h1>
 <p>
-  I have studying MSC in Comuputer science.I have completed 4 modules Principles
+  I am studying MSC in Comuputer science.I have completed 4 modules Principles
   of programming,Database, SoftwearDesign And Principles, Java programming. I
   have been learning webdevelopment along with the study.I hold Bachler degree
   in Accountancy and finance also I am fully qualified accountting techncinan
